First Last Prev Next    No search results available      Search page      Enter new bug
Bug#: 25871
Product:  
Component:  
Status: RESOLVED
Resolution: FIXED
Assigned To: rsandifo@gcc.gnu.org <rsandifo@gcc.gnu.org>
Host:
Reported against  
Priority:  
Severity:  
Target Milestone:  
 
 
Target:
Reporter: Joshua Kinard <kumba@gentoo.org>
Add CC:
CC:
Remove selected CCs
Build:
URL:
Summary:
Keywords:
Known to work:
Known to fail:

Attachment Description Type Created Size Actions
gcc-4.2.x-fix-mips64-trampolines.patch Use dmove/move where appropriate patch 2006-01-20 06:48 521 bytes Edit | Diff
gcc-4.2.x-fix-mips64-trampolines.patch Use dmove/move where appropriate patch 2006-01-20 06:54 518 bytes Edit | Diff
Create a New Attachment (proposed patch, testcase, etc.) View All

Bug 25871 depends on: Show dependency tree
Show dependency graph
Bug 25871 blocks:

Additional Comments:






View Bug Activity   |   Format For Printing   |   Clone This Bug


Description:   Last confirmed: 2006-04-28 22:36 Opened: 2006-01-20 06:47
In gcc/config/mips/mips.h, the TRAMPOLINE_TEMPLATE macro uses three 32bit move
statements, that when working with 64bit code, will cause problems.  The only
time this has been observed thus far was in filesystem code borrowed from grub
which relied heavily on nested functions.

A patch against trunk is attached, but this bug goes as far back as 3.3.x.

------- Comment #1 From Joshua Kinard 2006-01-20 06:48 -------
Created an attachment (id=10683) [edit]
Use dmove/move where appropriate

------- Comment #2 From Joshua Kinard 2006-01-20 06:54 -------
Created an attachment (id=10684) [edit]
Use dmove/move where appropriate

Typo in original, this is the correct version.

------- Comment #3 From Andrew Pinski 2006-01-20 14:10 -------
Conifmred but this is actually not a regression from any versions of GCC (after
the EGCS split) that I can tell from as the source has not changed that much.

------- Comment #4 From Joseph S. Myers 2006-04-26 08:39 -------
Subject: Bug 25871

Author: jsm28
Date: Wed Apr 26 08:38:58 2006
New Revision: 113272

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=113272
Log:
        From Bugzilla:
        2006-04-26  Joshua Kinard  <kumba@gentoo.org>

        PR target/25871
        * gcc/config/mips/mips.h (TRAMPOLINE_TEMPLATE): Avoid 32-bit moves
        with 64-bit pointers.

Modified:
    branches/csl-gxxpro-3_4-branch/ChangeLog.csl
    branches/csl-gxxpro-3_4-branch/gcc/config/mips/mips.h

------- Comment #5 From Joseph S. Myers 2006-04-26 08:40 -------
Subject: Bug 25871

Author: jsm28
Date: Wed Apr 26 08:40:26 2006
New Revision: 113273

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=113273
Log:
        From Bugzilla:
        2006-04-26  Joshua Kinard  <kumba@gentoo.org>

        PR target/25871
        * gcc/config/mips/mips.h (TRAMPOLINE_TEMPLATE): Avoid 32-bit moves
        with 64-bit pointers.

Modified:
    branches/csl/sourcerygxx-4_1/ChangeLog.csl
    branches/csl/sourcerygxx-4_1/gcc/config/mips/mips.h

------- Comment #6 From rsandifo@gcc.gnu.org 2006-04-28 22:36 -------
The patch looks good to me, thanks, and should be small enough to
avoid the need for a copyright assignment.  I'll apply it next week.

------- Comment #7 From rsandifo@gcc.gnu.org 2006-05-02 12:57 -------
Subject: Bug 25871

Author: rsandifo
Date: Tue May  2 12:57:52 2006
New Revision: 113460

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=113460
Log:
2006-05-02  Joshua Kinard  <kumba@gentoo.org>

        PR target/25871
        * gcc/config/mips/mips.h (TRAMPOLINE_TEMPLATE): Avoid 32-bit moves
        with 64-bit pointers.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/mips/mips.h

------- Comment #8 From rsandifo@gcc.gnu.org 2006-05-02 13:02 -------
Fixed on mainline.

First Last Prev Next    No search results available      Search page      Enter new bug