2006-05-02  Joshua Kinard  <kumba@gentoo.org>

PR target/25871
	* gcc/config/mips/mips.h (TRAMPOLINE_TEMPLATE): Avoid 32-bit moves
	with 64-bit pointers.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@113460 138bc75d-0d04-0410-961f-82ee72b054a4